# AutoDrive-Core

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
common/include/: NetworkConfig.h  VehicleData.h
ecu_firmware/: CMakeLists.txt
ecu_firmware/include/: FreeRTOSConfig.h
ecu_firmware/src/: CANTransmitter.cpp  CANTransmitter.h  VehicleSimulator.cpp  VehicleSimulator.h  main.cpp
hmi_dashboard/: CMakeLists.txt
hmi_dashboard/qml/: Dashboard.qml
hmi_dashboard/src/: CANReceiver.cpp  CANReceiver.h  DashboardBackend.cpp  DashboardBackend.h  main.cpp
